tests/trybuild/entities/comma_alone.stderr
error: no rules expected the token `,`
 --> tests/trybuild/entities/comma_alone.rs:4:30
  |
4 |     let entities = entities!(,);
  |                              ^ no rules expected this token in macro call
